apps/3rd/argocd/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - istio-gateways/public
  hosts:
    - argocd.mydomain.com
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
  tls:
    - match:
        - port: 443
          sniHosts:
            - argocd.mydomain.com
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
